--- a/about.html
+++ b/about.html
@@ -40,14 +40,14 @@
         <div class="member-profile">
             <img src="css/image/cc1-2.jpg" alt="Aurellia Rasya Gunawan" class="member-photo">
             <h2>Aurellia Rasya Gunawan</h2>
-            <p><strong>Role:</strong> Project Manager</p>
+            <p><strong>Ig:</strong>@aurelliarg</p>
             <p><strong>NIM:</strong> 1101213214</p>
         </div>
 
         <div class="member-profile">
             <img src="css/image/shania.jpg" alt="Nama Anggota 2" class="member-photo">
-            <h2>Shania Wardani</h2>
-            <p><strong>Ig:</strong> shania.wardani</p>
+            <h2>Shania Wardani      </h2>
+            <p><strong>Ig:</strong>@shania.wardani</p>
             <p><strong>NIM:</strong> 1101213427</p>
         </div>
     </div>
